example/secondfile/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ATOM_Account__c</fullName>
        <formula>Account.ATOM_Account__c</formula>
        <label>ATOM Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approve_Contracts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Provisioning_Type__c</fullName>
        <label>BD Provisioning Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Trigger_Date_Time__c</fullName>
        <description>This field will be populated when the BD user creation webservice call will be made for the first time</description>
        <label>BD Trigger Date&amp;Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BD_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>BD User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <formula>Account.BasicTier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Begin_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Begin Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <label>Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birch_API_Message_Code__c</fullName>
        <label>Birch API Message Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birch_API_Message__c</fullName>
        <label>Birch API Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Birch_User_API_Call_Date__c</fullName>
        <label>Birch User API Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Birch_User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Birch User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSP_Failure_Count__c</fullName>
        <label>CSP Failure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Role_Formula__c</fullName>
        <formula>IF (
  AND(

Create_Modify_Profile__c  ,
Begin_Quote__c  ,
Approve_Contracts__c ,
Manage_MDF__c  || MDF_Read_Only__c ,
Basic__c == false,
Provider_Directory__c ,
Community_Enabled__c,
Manage_Billing__c,
Service_Assurance__c ), &quot;Admin&quot;, 

IF (
  AND(

Create_Modify_Profile__c  ,
Begin_Quote__c  ,
Approve_Contracts__c ,
Basic__c,
Primary_Contact__c ,
Provider_Directory__c ,
Community_Enabled__c,
Manage_Billing__c,
Service_Assurance__c ), &quot;Admin&quot;, 

IF(Community_Enabled__c, &quot;User&quot;, &quot;&quot;

     )   
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Address_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Address from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Modify_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create/Modify Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_time_AIA__c</fullName>
        <defaultValue>true</defaultValue>
        <label>First time AIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_time_ASE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First time ASE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_New_PE_Username__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate New PE Username</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDF_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDF - Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manage_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manage_MDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDF - Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetExam_User_Type__c</fullName>
        <label>NetExam User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solution Provider</fullName>
                    <default>true</default>
                    <label>Solution Provider</label>
                </value>
                <value>
                    <fullName>EBM Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEUserNameFormula__c</fullName>
        <formula>IF(
Partner_Exchange_User_Name__c = &quot;&quot;, 
LEFT( FirstName, 1) &amp; 
   SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE ( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( LastName, &quot; &quot; , &quot;&quot; ), &quot;,&quot; ,&quot;&quot; ), &quot;&apos;&quot;, &quot;&quot; ) , &quot;-&quot; , &quot;&quot;) , &quot;.&quot; ,&quot;&quot; ) , &quot;!&quot; ,&quot;&quot; ), &quot;*&quot;, &quot;&quot; ), &quot;_&quot; , &quot;&quot; ) , &quot;#&quot;, &quot;&quot; ) 
, &quot;1&quot;, &quot;&quot;), &quot;2&quot;, &quot;&quot;), &quot;3&quot;, &quot;&quot;), &quot;4&quot;, &quot;&quot;), &quot;5&quot;, &quot;&quot;), &quot;6&quot;, &quot;&quot;), &quot;7&quot;, &quot;&quot;), &quot;8&quot;, &quot;&quot;), &quot;9&quot;, &quot;&quot;), &quot;0&quot;, &quot;&quot;),
LEFT( Partner_Exchange_User_Name__c, LEN(Partner_Exchange_User_Name__c) - PEUserNameNumericDigits__c ) 
)</formula>
        <label>PEUserNameFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEUserNameNumericDigits__c</fullName>
        <formula>IF (ISNUMBER (RIGHT(Partner_Exchange_User_Name__c, 5)), 5,
IF (ISNUMBER (RIGHT(Partner_Exchange_User_Name__c, 4)), 4,
IF (ISNUMBER (RIGHT(Partner_Exchange_User_Name__c, 3)), 3,
IF (ISNUMBER (RIGHT(Partner_Exchange_User_Name__c, 2)), 2,
IF (ISNUMBER (RIGHT(Partner_Exchange_User_Name__c, 1)), 1,
0
  )))))</formula>
        <label>PEUserNameNumericDigits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PE_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>Partner Exchange User ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PE_User_Id_Formula__c</fullName>
        <formula>VALUE( PE_User_ID__c )</formula>
        <label>PE User Id Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Exchange_Status__c</fullName>
        <label>Partner Exchange Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Exchange_User_Name__c</fullName>
        <label>Partner Exchange User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <formula>TEXT(Account.Partner_Type__c)</formula>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_User_Role__c</fullName>
        <formula>Account.Name+&apos; &apos;+IF(Community_Role_Formula__c == &apos;Admin&apos;,&apos;Partner Manager&apos;,IF(Community_Role_Formula__c == &apos;User&apos;,&apos;Partner User&apos;,&apos;&apos;))</formula>
        <label>Partner User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premier_Login__c</fullName>
        <label>Premier Login</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Trainings_Completed__c</fullName>
        <label>Product Trainings Completed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>Attwireless</fullName>
                </value>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>Broadband</fullName>
                </value>
                <value>
                    <fullName>CaaS</fullName>
                </value>
                <value>
                    <fullName>COLHS</fullName>
                </value>
                <value>
                    <fullName>IPFLEX</fullName>
                </value>
                <value>
                    <fullName>IPTollFree</fullName>
                </value>
                <value>
                    <fullName>MDM</fullName>
                </value>
                <value>
                    <fullName>MiiM</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>NBFW</fullName>
                </value>
                <value>
                    <fullName>PaaS</fullName>
                </value>
                <value>
                    <fullName>PNT</fullName>
                </value>
                <value>
                    <fullName>StaaS</fullName>
                </value>
                <value>
                    <fullName>PRIVATECLOUD</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adminstrative</fullName>
                </value>
                <value>
                    <fullName>Alternate Portal Admin</fullName>
                </value>
                <value>
                    <fullName>API Contact</fullName>
                </value>
                <value>
                    <fullName>Architect/IT Lead Contact</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Contact for Notices</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Fieldglass Administrator</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Main Contact</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>MDF Management</fullName>
                </value>
                <value>
                    <fullName>Mobility Lead</fullName>
                </value>
                <value>
                    <fullName>NOC</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Portal Administrator</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Primary Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Provisioning Contact</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIDeleteContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deleting the Created Contact from Lead Conversion</description>
        <label>SIDeleteContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Assurance_Status__c</fullName>
        <label>Service Assurance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Assurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Assurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Company__c</fullName>
        <formula>Account.Test_Company__c</formula>
        <label>Test Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Through_Channel_API_Message_Code__c</fullName>
        <label>Through Channel API Message Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Through_Channel_API_Message__c</fullName>
        <label>Through Channel API Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Coordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a user can view transcripts of other users in NetExam</description>
        <label>Training Coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>NetExam User Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                    <default>true</default>
                    <label>Student</label>
                </value>
                <value>
                    <fullName>System Administrators</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isconverted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This intent of this field is to indicated when the associated lead has been converted into an account</description>
        <label>isconverted</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>